--- a/furniture/furni/templates/furni/login.html
+++ b/furniture/furni/templates/furni/login.html
@@ -97,7 +97,7 @@
                 <h2>Sign in</h2>
                 <form method="post" action="">
                     {% csrf_token %}
-                    <input type="text" name="username" placeholder="Mobile number or email address*" required />
+                    <input type="text" name="username" placeholder="Email address*" required />
                     <input type="password" name="password" placeholder="Enter your password" required />
                     <button type="submit" class="login-btn">Login →</button>
 
