--- a/furniture/templates/footer.html
+++ b/furniture/templates/footer.html
@@ -1,131 +1,168 @@
 {% load static %}
 <!-- Start Footer Section -->
 <footer class="footer-section">
-	<div class="container relative">
-		<div class="row g-5 align-items-start mb-5">
-			<div class="col-lg-6">
-				<h5 class="text-uppercase fw-bold text-danger">Module Furniture & Interiors</h5>
-				<p><strong>Timing :</strong> Mon - Sun 9:30 AM to 8:30 PM</p>
-				<p><strong>Contact :<a href="tel: +91 8129718086"></strong>+91 8129718086</a></p>
+    <div class="container relative">
+        <div class="row g-5 align-items-start mb-5">
+            <div class="col-lg-6">
+                <h5 class="text-uppercase fw-bold text-danger">Module Furniture & Interiors</h5>
+                <p><strong>Timing :</strong> Mon - Sun 9:30 AM to 8:30 PM</p>
+                <p><strong>Contact :<a href="tel:+918129718086">+91 8129718086</a></strong></p>
 
-				<p><strong>Address</strong><br>
-					MANAKKAPADY, IRUMPANAM <br>
-					THRIPPUNITHURA,KOCHI<br>
-					KERALA 682309
-				</p>
+                <p><strong>Address</strong><br>
+                    MANAKKAPADY, IRUMPANAM <br>
+                    THRIPPUNITHURA, KOCHI<br>
+                    KERALA 682309
+                </p>
 
-				<div class="mt-3 store-buttons">
-					<a href="#" class="btn me-2" white="">Book Store Visit</a>
-					<a href="https://maps.app.goo.gl/4RALF3jt4C3Ma1X59" target="_blank" class="btn">Get Direction</a>
-				</div>
-			</div>
+                <div class="mt-3 store-buttons">
+                    <a href="#" class="btn me-2">Book Store Visit</a>
+                    <a href="https://maps.app.goo.gl/4RALF3jt4C3Ma1X59" target="_blank" class="btn">Get Direction</a>
+                </div>
+            </div>
 
-			<div class="col-lg-6">
-				<iframe
-					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.5727017710888!2d76.35405307503079!3d9.969463890134316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0873c2157fd857%3A0x41607786bbad0e2c!2sModule%20Furniture%20%26%20Interiors!5e0!3m2!1sen!2sin!4v1755058521846!5m2!1sen!2sin"
-					width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
-					referrerpolicy="no-referrer-when-downgrade">
-				</iframe>
-			</div>
-		</div>
-		<div class="row g-5 mb-5">
-			<div class="col-lg-4">
-				<div class="mb-4 footer-logo-wrap"><a href="home2" class="footer-logo">Module
-						<span>Furnitures</span></a></div>
-				<p class="mb-4">At Module Furniture, we blend tradition with innovation to offer high-quality furniture
-					for every space. As a proud subsidiary of Thayyil Furniture trusted by households and businesses for
-					decades we bring a fresh, modern perspective to the industry.</p>
+            <div class="col-lg-6">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.5727017710888!2d76.35405307503079!3d9.969463890134316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0873c2157fd857%3A0x41607786bbad0e2c!2sModule%20Furniture%20%26%20Interiors!5e0!3m2!1sen!2sin!4v1755058521846!5m2!1sen!2sin"
+                    width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+        </div>
 
-				<ul class="list-unstyled custom-social">
-					<li><a href="https://www.facebook.com/people/Module-Furniture/61553143696798/?ref=_ig_profile_ac"><span
-								class="fa fa-brands fa-facebook-f"></span></a></li>
-					<li><a href="https://www.instagram.com/module_furniture_/"><span
-								class="fa fa-brands fa-instagram"></span></a></li>
-					<li><a href="https://wa.me/918129718086?text=I'm%20interested%20in%20buying%20some%20furniture"><span
-								class="fa fa-brands fa-whatsapp"></span></a></li>
-					<li><a href="https://www.linkedin.com/company/module-furnitures/about/"><span
-								class="fa fa-brands fa-linkedin"></span></a></li>
-				</ul>
-			</div>
+        <div class="row g-5 mb-5">
+            <div class="col-lg-4">
+                <div class="mb-4 footer-logo-wrap"><a href="home2" class="footer-logo">Module
+                        <span>Furnitures</span></a></div>
+                <p class="mb-4">At Module Furniture, we blend tradition with innovation to offer high-quality furniture
+                    for every space. As a proud subsidiary of Thayyil Furniture trusted by households and businesses for
+                    decades we bring a fresh, modern perspective to the industry.</p>
 
+                <ul class="list-unstyled custom-social">
+                    <li><a href="https://www.facebook.com/people/Module-Furniture/61553143696798/?ref=_ig_profile_ac"><span
+                                class="fa fa-brands fa-facebook-f"></span></a></li>
+                    <li><a href="https://www.instagram.com/module_furniture_/"><span
+                                class="fa fa-brands fa-instagram"></span></a></li>
+                    <li><a href="https://wa.me/918129718086?text=I'm%20interested%20in%20buying%20some%20furniture"><span
+                                class="fa fa-brands fa-whatsapp"></span></a></li>
+                    <li><a href="https://www.linkedin.com/company/module-furnitures/about/"><span
+                                class="fa fa-brands fa-linkedin"></span></a></li>
+                </ul>
+            </div>
 
+            <div class="col-lg-8">
+                <div class="row links-wrap">
+                    <div class="col-6 col-sm-6 col-md-3">
+                        <ul class="list-unstyled">
+                            <li><a href="{% url 'aboutus' %}">About us</a></li>
+                            <li><a href="{% url 'services' %}">Services</a></li>
+                        </ul>
+                    </div>
 
-			<div class="col-lg-8">
-				<div class="row links-wrap">
-					<div class="col-6 col-sm-6 col-md-3">
-						<ul class="list-unstyled">
-							<li><a href="{% url 'aboutus' %}">About us</a></li>
-							<li><a href="{% url 'services' %}">Services</a></li>
+                    <div class="col-6 col-sm-6 col-md-3">
+                        <ul class="list-unstyled">
+                            <li><a href="#">Support</a></li>
+                            <li><a href="{% url 'leaders' %}">Leadership</a></li>
+                        </ul>
+                    </div>
 
-						</ul>
-					</div>
+                    <div class="col-6 col-sm-6 col-md-3">
+                        <ul class="list-unstyled">
+                            <li><a href="#">Jobs</a></li>
+                            <li>
+                                <a class="track-order-link" data-bs-toggle="modal" data-bs-target="#trackOrderModal">Track Order</a>
+                            </li>
+                        </ul>
+                    </div>
 
-					<div class="col-6 col-sm-6 col-md-3">
-						<ul class="list-unstyled">
-							<li><a href="#">Support</a></li>
-							<li><a href="{% url 'leaders' %}">Leadership</a></li>
-						</ul>
-					</div>
+                    <div class="col-6 col-sm-6 col-md-3">
+                        <ul class="list-unstyled">
+                            <li><a href="">Blog</a></li>
+                            <li><a href="{% url 'contactus' %}">Contact us</a></li>
+                        </ul>
+                    </div>
+                </div>
 
-					<div class="col-6 col-sm-6 col-md-3">
-						<ul class="list-unstyled">
-							<li><a href="#">Jobs</a></li>
-							<li><a href="#">Track Order</a></li>
+                <div class="payment-methods ms-4" style="padding-top:80px;">
+                    <!-- Payment icons can go here -->
+                </div>
+            </div>
+        </div>
 
-						</ul>
-					</div>
+        <div class="border-top copyright">
+            <div class="d-flex justify-content-between align-items-center pt-4 flex-wrap">
+                <p class="mb-2 text-center text-lg-start">
+                    Copyright &copy;
+                    <script>document.write(new Date().getFullYear());</script> Module Furnitures. All Rights Reserved.
+                </p>
 
-					<div class="col-6 col-sm-6 col-md-3">
-						<ul class="list-unstyled">
-							<li><a href="">Blog</a></li>
-							<li><a href="{% url 'contactus' %}">Contact us</a></li>
-						</ul>
-					</div>
-				</div>
-				
-						<div class="payment-methods ms-4" style="padding-top:80px;">
-        
+                <div
+                    class="d-flex flex-wrap align-items-center justify-content-lg-end justify-content-center gap-2 text-center">
+                    <p style="margin-top: 11px;">We Accept</p>
+                    <img src="{% static 'images/visa.jpg' %}" alt="Visa" height="32">
+                    <img src="{% static 'images/mastercard.jpg' %}" alt="MasterCard" height="32">
+                    <img src="{% static 'images/maestro1.png' %}" alt="Maestro" height="32">
+                    <img src="{% static 'images/amex.jpg' %}" alt="American Express" height="32">
+                    <img src="{% static 'images/rupay.jpg' %}" alt="RuPay" height="32">
+                    <img src="{% static 'images/upi1.jpg' %}" alt="UPI" height="32">
+                    <img src="{% static 'images/wallet.jpg' %}" alt="Wallet" height="32">
+                    <img src="{% static 'images/net.jpg' %}" alt="Net Banking" height="32">
+                </div>
+            </div>
+        </div>
     </div>
-
-			</div>
-
-		</div>
-
-		<div class="border-top copyright">
-  <div class="d-flex justify-content-between align-items-center pt-4 flex-wrap">
-    
-    <!-- Left side -->
-    <p class="mb-2 text-center text-lg-start">
-      Copyright &copy;
-      <script>document.write(new Date().getFullYear());</script> Module Furnitures. All Rights Reserved.
-    </p>
-
-    <!-- Right side -->
-    <div class="d-flex flex-wrap align-items-center justify-content-lg-end justify-content-center gap-2 text-center">
-      <p style="margin-top: 11px;">We Accept</p>
-      <img src="{% static 'images/visa.jpg' %}" alt="Visa" height="32">
-      <img src="{% static 'images/mastercard.jpg' %}" alt="MasterCard" height="32">
-      <img src="{% static 'images/maestro1.png' %}" alt="Maestro" height="32">
-      <img src="{% static 'images/amex.jpg' %}" alt="American Express" height="32">
-      <img src="{% static 'images/rupay.jpg' %}" alt="RuPay" height="32">
-      <img src="{% static 'images/upi1.jpg' %}" alt="UPI" height="32">
-      <img src="{% static 'images/wallet.jpg' %}" alt="Wallet" height="32">
-      <img src="{% static 'images/net.jpg' %}" alt="Net Banking" height="32">
-    </div>
-
-  </div>
-</div>
-
-
-
-	</div>
 </footer>
 <!-- End Footer Section -->
 
+<!-- Track Order Modal -->
+<div class="modal fade" id="trackOrderModal" tabindex="-1" aria-labelledby="trackOrderLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="trackOrderLabel">Track Your Order</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form id="trackOrderForm">
+          <div class="mb-3">
+            <label for="orderNo" class="form-label">Order Number</label>
+            <input type="text" id="orderNo" name="orderNo" class="form-control" required>
+          </div>
+          <div class="mb-3">
+            <label for="emailid" class="form-label">Email Address</label>
+            <input type="email" id="emailid" name="email" class="form-control" required>
+          </div>
+          <p id="delivery" style="color: red;"></p>
+          <button type="submit" class="btn btn-primary w-100">Track</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 
+<!-- Scripts -->
 <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 <script src="{% static 'js/tiny-slider.js' %}"></script>
 <script src="{% static 'js/custom.js' %}"></script>
-</body>
-
-</html>
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+    const form = document.getElementById('trackOrderForm');
+    form.addEventListener('submit', function (event) {
+        event.preventDefault();
+        const orderNo = document.getElementById('orderNo').value;
+        const email = document.getElementById('emailid').value;
+		const url = `/view_single_order/${orderNo}/${encodeURIComponent(email)}`;
+        fetch(url, { method: "GET" })
+            .then(response => {
+                if (response.ok) {
+                    window.location.href = url;
+                } else {
+                    document.getElementById('delivery').innerText = "The order does not exist";
+                }
+            })
+            .catch(error => {
+                document.getElementById('delivery').innerText = "An error occurred";
+                console.error(error);
+            });
+    });
+});
+</script>
