--- a/furniture/furni/templates/furni/return.html
+++ b/furniture/furni/templates/furni/return.html
@@ -54,7 +54,7 @@
 								
 						<option value="Bought by mistake" {% if form.reason.value == "Bought by mistake" %}selected{% endif %}>Bought by mistake</option>
     <option value="Better Price Available" {% if form.reason.value == "Better Price Available" %}selected{% endif %}>Better Price Available</option>
-    <option value="Performance or quality issues" {% if form.reason.value == "Performance or quality issues" %}selected{% endif %}>Performance or quality issues</option>
+    <option value="Performance or Quality Issue" {% if form.reason.value == "Performance or Quality Issue" %}selected{% endif %}>Performance or Quality Issue</option>
     <option value="Item arrived too late" {% if form.reason.value == "Item arrived too late" %}selected{% endif %}>Item arrived too late</option>
     <option value="Missing parts or accessories" {% if form.reason.value == "Missing parts or accessories" %}selected{% endif %}>Missing parts or accessories</option>
     <option value="Wrong item was sent" {% if form.reason.value == "Wrong item was sent" %}selected{% endif %}>Wrong item was sent</option>
