created profile page

--- a/furniture/furni/templates/furni/cart_list.html
+++ b/furniture/furni/templates/furni/cart_list.html
@@ -29,8 +29,8 @@
               <button class="btn btn-sm btn-outline-dark" onclick="changeQuantity({{item.id}}, 1)">+</button>
             </div>
 
-            <!-- Delivery info -->
-            <p class="small text-muted">Delivery by <strong>Fri, Aug 29</strong></p>
+            <!-- Delivery info 
+            <p class="small text-muted">Delivery by <strong>Fri, Aug 29</strong></p>-->
           </div>
 
           <!-- Remove -->
